Person.collideObstacle(Obstacle *) ready for testing

--- a/graphics_final.vcxproj
+++ b/graphics_final.vcxproj
@@ -83,6 +83,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\bullet.h" />
     <ClInclude Include="include\camera.h" />
     <ClInclude Include="include\enemy.h" />
     <ClInclude Include="include\obstacle.h" />
